<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/taskFileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/attach_file"
        app:layout_constraintStart_toStartOf="@+id/taskTeamTextView"
        app:layout_constraintTop_toBottomOf="@+id/userTeamAssignmentRadioGroup" />

    <Button
        android:id="@+id/add_task_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add_task_button_text"
        app:layout_constraintStart_toStartOf="@+id/selectedFileText"
        app:layout_constraintTop_toBottomOf="@+id/selectedFileText" />

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/do_something_placeholder_description"
        app:layout_constraintStart_toStartOf="@+id/taskBodyTextView"
        app:layout_constraintTop_toBottomOf="@+id/taskBodyTextView" />

    <TextView
        android:id="@+id/taskBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/task_description_add_task_form"
        app:layout_constraintStart_toStartOf="@+id/editTextTaskTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskTitle" />

    <TextView
        android:id="@+id/taskTeamTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/team_assignment_form_text"
        app:layout_constraintStart_toStartOf="@+id/editTextTaskDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskDescription" />

    <TextView
        android:id="@+id/addTaskHeaderText"
        android:layout_width="290dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/add_task_button_text"
        android:textAlignment="viewStart"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/task_title_add_task_form"
        app:layout_constraintEnd_toStartOf="@+id/addTaskHeaderText"
        app:layout_constraintStart_toStartOf="@+id/addTaskHeaderText"
        app:layout_constraintTop_toBottomOf="@+id/addTaskHeaderText" />

    <EditText
        android:id="@+id/editTextTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/my_task_add_task_form"
        app:layout_constraintStart_toStartOf="@+id/taskTitleText"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleText" />

    <RadioGroup
        android:id="@+id/userTeamAssignmentRadioGroup"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/taskTeamTextView"
        app:layout_constraintTop_toBottomOf="@+id/taskTeamTextView">

        <RadioButton
            android:id="@+id/leelooSettingsRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/leelooTeamName"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rubySettingsRadioButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rubySettingsRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rubyTeamName"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/zorgSettingsRadioButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/leelooSettingsRadioButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529" />

        <RadioButton
            android:id="@+id/zorgSettingsRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zorgTeamName"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rubySettingsRadioButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529" />
    </RadioGroup>

    <TextView
        android:id="@+id/selectedFileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_file_selected"
        app:layout_constraintStart_toStartOf="@+id/taskFileText"
        app:layout_constraintTop_toBottomOf="@+id/taskFileText" />

    <Button
        android:id="@+id/chooseFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select File"
        app:layout_constraintBottom_toBottomOf="@+id/selectedFileText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectedFileText" />

</androidx.constraintlayout.widget.ConstraintLayout>