<resources>
    <string name="app_name">Task Master</string>
    <string name="my_tasks_header">My Tasks</string>
    <string name="add_task_button_text">Add Task</string>
    <string name="all_tasks_button_text">All Tasks</string>
    <string name="placeholdertasklistimagetext">placeholderTaskListImage</string>
    <string name="task_description_add_task_form">Task Description</string>
    <string name="task_title_add_task_form">Task Title</string>
    <string name="do_something_placeholder_description">Do something</string>
    <string name="total_tasks_holding_text">Total tasks: 0</string>
    <string name="submitted_text">Submitted!</string>
    <string name="my_task_add_task_form">My Task</string>
    <string name="task_details_header_text">Task Details</string>
    <string name="update_settings">Update Settings</string>
    <string name="my_name">My Name</string>
    <string name="username_title">Username</string>
    <string name="settings_header">Settings</string>
    <string name="taskListTitleText">tasks</string>
    <string name="task1Text">Do laundry</string>
    <string name="task2Text">Make dinner</string>
    <string name="task3Text">Hide and seek with cat</string>
    <string name="loremIpsumText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title_fragment_text">Task Title</string>
    <string name="task_body_fragment_text">Task Body</string>
    <string name="task_state_fragment_text">Task State</string>
    <string name="task_progress_text">Progress:</string>
    <string name="team_assignment_form_text">Team Assignment</string>
    <string name="leelooTeamName">Leeloo</string>
    <string name="rubyTeamName">Ruby</string>
    <string name="zorgTeamName">Zorg</string>
    <string name="sign_up_activity_header">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up_submit_button">Sign Up</string>
    <string name="sign_up_main_activity_button">Sign Up</string>
    <string name="attach_file">Attach File</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="address_detail">Unknown Address</string>
</resources>