...
    android:layout_height="48dp"
    tools:context="com.jnelsonjava.taskmaster.TaskFragment">

    <!-- Done: Update blank fragment layout -->

    <TextView
        android:id="@+id/taskTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title_fragment_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/taskBodyTextView"
        app:layout_constraintHorizontal_bias="0.5"
...
    <TextView
        android:id="@+id/taskBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_body_fragment_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/taskStateTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/taskTitleTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskStateTextView"
...
